Fixed bug #53425 (mysqli_real_connect() ignores client flags when built to call libmysql)

# Based on patch by tre-php-net at crushedhat dot com